cluster/apps/home/manictime/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manictime
  namespace: home
  labels:
    app.kubernetes.io/name: manictime
spec:
  replicas: 0
  selector:
    matchLabels:
      app: manictime
  template:
    metadata:
      labels:
        app: manictime
      annotations:
        configmap.reloader.stakater.com/reload: "manictime-config"
    spec:
      containers:
        - name: manictime
          image: manictime/manictimeserver:5.1.2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 8080
              name: manictime
          volumeMounts:
            - name: manictime-data
              mountPath: /app/Data
            - name: manictime-config
              mountPath: /app/Data/ManicTimeServerSettings.json
              subPath: ManicTimeServerSettings.json
      volumes:
        - name: manictime-data
          persistentVolumeClaim:
            claimName: manictime-data
        - name: manictime-config
          configMap:
            name: manictime-config
            items:
            - key: ManicTimeServerSettings.json
              path: ManicTimeServerSettings.json
